--- a/web/index.html
+++ b/web/index.html
@@ -20,8 +20,8 @@
 
         <div class="stats">
             <div class="stat-item">
-                <span class="stat-number">12</span>
-                <span class="stat-label">Demo Scenes</span>
+                <span class="stat-number">10</span>
+                <span class="stat-label">Cinematic Scenes</span>
             </div>
             <div class="stat-item">
                 <span class="stat-number">1920x1080</span>
